--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   auto_size_text: ^3.0.0
+  flutter_spinbox: ^0.7.0
 
 dev_dependencies:
   flutter_test:
