--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   auto_size_text: ^3.0.0
   flutter_spinbox: ^0.7.0
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
