--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   auto_size_text: ^3.0.0
   flutter_spinbox: ^0.7.0
   provider: ^6.0.1
+  fl_chart: ^0.40.6
 
 dev_dependencies:
   flutter_test:
