--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_spinbox: ^0.7.0
   provider: ^6.0.1
   fl_chart: ^0.40.6
+  tuple: ^2.0.0
 
 dev_dependencies:
   flutter_test:
